# mailgun-python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
mailgun/: __init__.py  api.py  base.py  ips.py  mailing_list.py
mailgun/domain/: __init__.py  ips.py  logs.py  messages.py
mailgun_sdk/: __init__.py  api.py  base.py  mailing_list.py
mailgun_sdk/domain/: messages.py
mailgunsdk/: api.py  base.py  ips.py
mailgunsdk/domain/: messages.py
tests/: test_api.py  test_base.py  test_init.py  test_ips.py  test_mailing_list.py
tests/domain/: test_init.py  test_ips.py  test_logs.py  test_messages.py
