[tool.poetry]
name = "mailgun-python-sdk"
version = "0.2.0"
description = "Mailgun SDK"
authors = ["Maxime Vdb <me@maxvdb.com>", "Omar Shaban <omars@php.net>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
six = "^1.16.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
